@@ -1,27 +1,27 @@
-using-constant-test:22:0:23:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:26:0:27:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:29:0:30:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:32:0:33:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:35:0:36:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:38:0:39:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:41:0:42:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:44:0:45:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:47:0:48:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:50:0:51:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:53:0:54:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:56:0:57:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:59:0:60:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:62:0:63:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:65:0:66:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:68:0:69:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:73:0:74:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:76:3:76:16::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:80:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:81:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:82:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:83:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:84:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:85:0:None:None:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:89:0:90:8::Using a conditional statement with a constant value:UNDEFINED
-using-constant-test:93:0:94:8::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:22:3:22:14::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:26:3:26:31::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:29:3:29:15:<lambda>:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:32:3:32:11::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:35:3:35:8::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:38:3:38:4::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:41:3:41:7::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:44:3:44:5::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:47:3:47:6::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:50:3:50:6::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:53:3:53:5::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:56:3:56:12::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:59:3:59:12::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:62:3:62:5::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:65:3:65:12::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:68:3:68:5::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:73:3:73:12::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:76:8:76:9::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:80:36:80:39:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:81:36:81:37:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:82:36:82:39:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:83:36:83:37:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:84:36:84:39:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:85:39:85:42:test_comprehensions:Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:89:3:89:15::Using a conditional statement with a constant value:UNDEFINED
+using-constant-test:93:3:93:18::Using a conditional statement with a constant value:UNDEFINED
 comparison-of-constants:117:3:117:8::"Comparison between constants: '2 < 3' has a constant value":HIGH
